@@ -11,6 +11,18 @@
 
     <packaging>pom</packaging>
 
+    <url>https://github.com/verronpro/office-stamper</url>
+    <organization>
+        <name>Verron.pro</name>
+        <url>https://verron.pro</url>
+    </organization>
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>LICENSE</url>
+        </license>
+    </licenses>
+
     <modules>
         <module>engine</module>
         <module>cli</module>
@@ -214,6 +226,88 @@
         </dependencies>
     </dependencyManagement>
 
+    <profiles>
+        <profile>
+            <id>gpg</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>3.2.8</version>
+                        <configuration>
+                            <bestPractices>true</bestPractices>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>mut</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.pitest</groupId>
+                        <artifactId>pitest-maven</artifactId>
+                        <version>1.22.0</version>
+                        <configuration>
+                            <jvmArgs>
+                                <jvmArg>--add-opens</jvmArg>
+                                <jvmArg>java.base/java.lang=ALL-UNNAMED</jvmArg>
+                            </jvmArgs>
+                            <features>
+                                <feature>+auto_threads</feature>
+                            </features>
+                            <useSlf4j>true</useSlf4j>
+                        </configuration>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.pitest</groupId>
+                                <artifactId>pitest-junit5-plugin</artifactId>
+                                <version>1.2.3</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>org.slf4j</groupId>
+                                <artifactId>slf4j-nop</artifactId>
+                                <version>2.0.17</version>
+                            </dependency>
+                        </dependencies>
+                        <executions>
+                            <execution>
+                                <phase>post-integration-test</phase>
+                                <goals>
+                                    <goal>mutationCoverage</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+            <reporting>
+                <plugins>
+                    <plugin>
+                        <groupId>org.pitest</groupId>
+                        <artifactId>pitest-maven</artifactId>
+                        <version>1.22.0</version>
+                    </plugin>
+                </plugins>
+            </reporting>
+        </profile>
+    </profiles>
+
     <distributionManagement>
         <site>
             <id>GitHub Page</id>
@@ -235,4 +329,10 @@
             <timezone>Beijing</timezone>
         </developer>
     </developers>
+
+    <scm>
+        <url>https://github.com/verronpro/office-stamper</url>
+        <developerConnection>scm:git:https://github.com/verronpro/office-stamper.git</developerConnection>
+        <connection>scm:git:https://github.com/verronpro/office-stamper.git</connection>
+    </scm>
 </project>
